# freeswitch-log-parser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: design-rationale.md
examples/: parse.rs
src/: chain.rs  level.rs  lib.rs  line.rs  message.rs  session.rs  stream.rs
tests/: production_log.rs
