[package]
name = "freeswitch-log-parser"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "Parser for FreeSWITCH log files — handles compressed .xz files, multi-line dumps, truncated buffers, and stateful UUID/timestamp tracking"
repository = "https://github.com/ticpu/freeswitch-log-parser"
keywords = ["freeswitch", "log", "parser", "voip", "telephony"]
categories = ["parser-implementations", "network-programming"]
documentation = "https://docs.rs/freeswitch-log-parser"

[lib]
name = "freeswitch_log_parser"

[dependencies]
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
xz2 = { version = "0.1", optional = true }
regex = { version = "1", optional = true }

[[bin]]
name = "fslog"
path = "src/bin/fslog/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:clap_complete", "dep:xz2", "dep:regex"]

[dev-dependencies]
xz2 = "0.1"
