[package]
name = "freeswitch-log-parser"
version = "0.2.0"
edition = "2021"
license = "LGPL-2.1-or-later"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "Parser for FreeSWITCH log files — handles compressed .xz files, multi-line dumps, truncated buffers, and stateful UUID/timestamp tracking"
repository = "https://github.com/ticpu/freeswitch-log-parser"
keywords = ["freeswitch", "log", "parser", "voip", "telephony"]
categories = ["parser-implementations", "network-programming"]
documentation = "https://docs.rs/freeswitch-log-parser"

[lib]
name = "freeswitch_log_parser"

[dependencies]
freeswitch-types = { version = "0.15", default-features = false }
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
xz2 = { version = "0.1", optional = true }
regex = { version = "1", optional = true }
ratatui = { version = "0.30", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_yml = { version = "0.0.12", optional = true }

[[bin]]
name = "fslog"
path = "src/bin/fslog/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:clap_complete", "dep:xz2", "dep:regex"]
tui = ["cli", "dep:ratatui", "dep:serde", "dep:serde_yml"]

[dev-dependencies]
xz2 = "0.1"
